// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Nudge Messages matches snapshot 1`] = `
<UNDEFINED
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [],
          "copyright_holders": Array [],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 11945,
          "published_at": undefined,
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "geriatrics",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259301",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "gerontology",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259302",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "secondary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259303",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "primary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259304",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "62902",
              "is_answer_order_important": false,
              "stem_html": "In the early 1900s, a New York physician named Dr. Ignatz Nascher developed a medical specialty that focused on the elderly. This field is known broadly as ___.",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": undefined,
          "tags": Array [
            ExerciseTag {
              "raw": "time:short",
            },
            ExerciseTag {
              "raw": "dok:2",
            },
            ExerciseTag {
              "raw": "blooms:2",
            },
            ExerciseTag {
              "raw": "type:practice",
            },
            ExerciseTag {
              "raw": "requires-context:true",
            },
            ExerciseTag {
              "raw": "book:stax-soc",
            },
            ExerciseTag {
              "raw": "lo:stax-soc:13-2-2",
            },
            ExerciseTag {
              "raw": "context-cnxmod:d9df5e48-4b72-482e-b616-886926188054",
            },
            ExerciseTag {
              "raw": "context-cnxfeature:fs-id2332825",
            },
          ],
          "uid": "11945@4",
          "uuid": "7ddae47d-c4ec-437e-80bd-3f54d8a639a7",
          "version": 4,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": "<div data-type=\\"note\\" data-has-label=\\"true\\" id=\\"fs-id2332825\\" class=\\"sociological-research\\" a-type=\\"term\\" id=\\"import-auto-id1169033058271\\">geriatrics</span>, a medical specialty that focuses on the elderly. He created the word by combining were before Nascher’s ideas gained acceptance?</p> </div></div> </div>",
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "killer: Environmental Limits to Population Growth",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 2`] = `
<UNDEFINED
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [],
          "copyright_holders": Array [],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 11945,
          "published_at": undefined,
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "geriatrics",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259301",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "gerontology",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259302",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "secondary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259303",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "primary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259304",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "62902",
              "is_answer_order_important": false,
              "stem_html": "In the early 1900s, a New York physician named Dr. Ignatz Nascher developed a medical specialty that focused on the elderly. This field is known broadly as ___.",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": undefined,
          "tags": Array [
            ExerciseTag {
              "raw": "time:short",
            },
            ExerciseTag {
              "raw": "dok:2",
            },
            ExerciseTag {
              "raw": "blooms:2",
            },
            ExerciseTag {
              "raw": "type:practice",
            },
            ExerciseTag {
              "raw": "requires-context:true",
            },
            ExerciseTag {
              "raw": "book:stax-soc",
            },
            ExerciseTag {
              "raw": "lo:stax-soc:13-2-2",
            },
            ExerciseTag {
              "raw": "context-cnxmod:d9df5e48-4b72-482e-b616-886926188054",
            },
            ExerciseTag {
              "raw": "context-cnxfeature:fs-id2332825",
            },
          ],
          "uid": "11945@4",
          "uuid": "7ddae47d-c4ec-437e-80bd-3f54d8a639a7",
          "version": 4,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": "<div data-type=\\"note\\" data-has-label=\\"true\\" id=\\"fs-id2332825\\" class=\\"sociological-research\\" a-type=\\"term\\" id=\\"import-auto-id1169033058271\\">geriatrics</span>, a medical specialty that focuses on the elderly. He created the word by combining were before Nascher’s ideas gained acceptance?</p> </div></div> </div>",
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "killer: Environmental Limits to Population Growth",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Take another chance",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 3`] = `
<UNDEFINED
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [],
          "copyright_holders": Array [],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 11945,
          "published_at": undefined,
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "geriatrics",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259301",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "gerontology",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259302",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "secondary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259303",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "primary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259304",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "62902",
              "is_answer_order_important": false,
              "stem_html": "In the early 1900s, a New York physician named Dr. Ignatz Nascher developed a medical specialty that focused on the elderly. This field is known broadly as ___.",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": undefined,
          "tags": Array [
            ExerciseTag {
              "raw": "time:short",
            },
            ExerciseTag {
              "raw": "dok:2",
            },
            ExerciseTag {
              "raw": "blooms:2",
            },
            ExerciseTag {
              "raw": "type:practice",
            },
            ExerciseTag {
              "raw": "requires-context:true",
            },
            ExerciseTag {
              "raw": "book:stax-soc",
            },
            ExerciseTag {
              "raw": "lo:stax-soc:13-2-2",
            },
            ExerciseTag {
              "raw": "context-cnxmod:d9df5e48-4b72-482e-b616-886926188054",
            },
            ExerciseTag {
              "raw": "context-cnxfeature:fs-id2332825",
            },
          ],
          "uid": "11945@4",
          "uuid": "7ddae47d-c4ec-437e-80bd-3f54d8a639a7",
          "version": 4,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": "<div data-type=\\"note\\" data-has-label=\\"true\\" id=\\"fs-id2332825\\" class=\\"sociological-research\\" a-type=\\"term\\" id=\\"import-auto-id1169033058271\\">geriatrics</span>, a medical specialty that focuses on the elderly. He created the word by combining were before Nascher’s ideas gained acceptance?</p> </div></div> </div>",
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "killer: Environmental Limits to Population Growth",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Not sure? Here’s a hint",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 4`] = `
<UNDEFINED
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [],
          "copyright_holders": Array [],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 11945,
          "published_at": undefined,
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "geriatrics",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259301",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "gerontology",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259302",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "secondary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259303",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "primary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259304",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "62902",
              "is_answer_order_important": false,
              "stem_html": "In the early 1900s, a New York physician named Dr. Ignatz Nascher developed a medical specialty that focused on the elderly. This field is known broadly as ___.",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": undefined,
          "tags": Array [
            ExerciseTag {
              "raw": "time:short",
            },
            ExerciseTag {
              "raw": "dok:2",
            },
            ExerciseTag {
              "raw": "blooms:2",
            },
            ExerciseTag {
              "raw": "type:practice",
            },
            ExerciseTag {
              "raw": "requires-context:true",
            },
            ExerciseTag {
              "raw": "book:stax-soc",
            },
            ExerciseTag {
              "raw": "lo:stax-soc:13-2-2",
            },
            ExerciseTag {
              "raw": "context-cnxmod:d9df5e48-4b72-482e-b616-886926188054",
            },
            ExerciseTag {
              "raw": "context-cnxfeature:fs-id2332825",
            },
          ],
          "uid": "11945@4",
          "uuid": "7ddae47d-c4ec-437e-80bd-3f54d8a639a7",
          "version": 4,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": "<div data-type=\\"note\\" data-has-label=\\"true\\" id=\\"fs-id2332825\\" class=\\"sociological-research\\" a-type=\\"term\\" id=\\"import-auto-id1169033058271\\">geriatrics</span>, a medical specialty that focuses on the elderly. He created the word by combining were before Nascher’s ideas gained acceptance?</p> </div></div> </div>",
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "killer: Environmental Limits to Population Growth",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Try again",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 5`] = `
<UNDEFINED
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "66861",
          "enrollment_url": "http://localhost:3001/enroll/66861",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [],
          "copyright_holders": Array [],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 11945,
          "published_at": undefined,
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "geriatrics",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259301",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "gerontology",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259302",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "secondary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259303",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "primary aging",
                  "correctness": undefined,
                  "feedback_html": undefined,
                  "id": "259304",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "62902",
              "is_answer_order_important": false,
              "stem_html": "In the early 1900s, a New York physician named Dr. Ignatz Nascher developed a medical specialty that focused on the elderly. This field is known broadly as ___.",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": undefined,
          "tags": Array [
            ExerciseTag {
              "raw": "time:short",
            },
            ExerciseTag {
              "raw": "dok:2",
            },
            ExerciseTag {
              "raw": "blooms:2",
            },
            ExerciseTag {
              "raw": "type:practice",
            },
            ExerciseTag {
              "raw": "requires-context:true",
            },
            ExerciseTag {
              "raw": "book:stax-soc",
            },
            ExerciseTag {
              "raw": "lo:stax-soc:13-2-2",
            },
            ExerciseTag {
              "raw": "context-cnxmod:d9df5e48-4b72-482e-b616-886926188054",
            },
            ExerciseTag {
              "raw": "context-cnxfeature:fs-id2332825",
            },
          ],
          "uid": "11945@4",
          "uuid": "7ddae47d-c4ec-437e-80bd-3f54d8a639a7",
          "version": 4,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": "<div data-type=\\"note\\" data-has-label=\\"true\\" id=\\"fs-id2332825\\" class=\\"sociological-research\\" a-type=\\"term\\" id=\\"import-auto-id1169033058271\\">geriatrics</span>, a medical specialty that focuses on the elderly. He created the word by combining were before Nascher’s ideas gained acceptance?</p> </div></div> </div>",
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "killer: Environmental Limits to Population Growth",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Give it another shot",
      },
      "validate": [MockFunction],
    }
  }
/>
`;
